--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,9 +23,8 @@
   <% end %>
 <% end %>
 
-
     <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu" style="background-color: #F2F3F4;">
-      <span class="navbar-toggler-icon custom-toggler" style="border-color: #012B4D;"></span>
+      <span class="navbar-toggler-icon custom-toggler" style: 'border-color: #012B4D;'></span>
     </button>
 
     <div class="collapse navbar-collapse justify-content-end flex-column align-items-end" id="navmenu">
@@ -47,15 +46,17 @@
           <% end %>
         </li>
         <li class="nav-item d-none d-lg-block">
-          <div class="profile-picture">
-            <% if user_signed_in? && current_user.photo.attached? %>
-              <%= link_to profile_path do %>
-                <%= image_tag current_user.photo.variant(resize: '30x30'), alt: 'profile picture', class: 'rounded-circle' %>
+          <% if user_signed_in? %>
+            <div class="profile-picture">
+              <% if current_user.photo.attached? %>
+                <%= link_to profile_path do %>
+                  <%= image_tag current_user.photo.variant(resize: '30x30'), alt: 'profile picture', class: 'rounded-circle' %>
+                <% end %>
+              <% else %>
+                <%= image_tag 'https://placehold.co/40x40', alt: 'placeholder', class: 'rounded-circle', width: '30', height: '30' %>
               <% end %>
-            <% else %>
-              <%= image_tag 'https://placehold.co/40x40', alt: 'placeholder', class: 'rounded-circle', width: '30', height: '30' %>
-            <% end %>
-          </div>
+            </div>
+          <% end %>
         </li>
       </ul>
     </div>
