--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg" style="background: linear-gradient(to left, #012B4D, #001626); margin-bottom: 0;">
+<nav class="navbar navbar-expand-md" style="background: linear-gradient(to left, #012B4D, #001626); margin-bottom: 0;">
   <div class="container d-lg-flex align-items-center">
     <div class="logo">
       <%= link_to root_path do %>
@@ -7,23 +7,7 @@
     </div>
     <a href="<%= root_path %>" class="navbar-title ms-lg-4 me-lg-auto" style="margin-left: 10px; color: #F2F3F4; font-family: 'Black Ops One', cursive; font-size: 30px; text-decoration: none;">Match Mate</a>
 
-<% if user_signed_in? %>
-  <% if current_user.photo.attached? %>
-    <%= link_to user_path(current_user) do %>
-      <div class="profile-picture me-2 d-lg-none">
-        <%= image_tag current_user.photo.variant(resize: '30x30'), alt: 'profile picture', class: 'rounded-circle', style: 'cursor: pointer;' %>
-      </div>
-    <% end %>
-  <% else %>
-    <%= link_to user_path(current_user) do %>
-      <div class="profile-picture me-2 d-lg-none">
-        <%= image_tag 'https://placehold.co/40x40', alt: 'placeholder', class: 'rounded-circle', width: '30', height: '30' %>
-      </div>
-    <% end %>
-  <% end %>
-<% end %>
-
-    <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu" style="background-color: #F2F3F4;">
+    <button class="navbar-toggler d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu" style="background-color: #F2F3F4;">
       <span class="navbar-toggler-icon custom-toggler" style: 'border-color: #012B4D;'></span>
     </button>
 
@@ -45,19 +29,21 @@
             <%= button_to 'Login', new_user_session_path, class: 'btn btn-dark-blue' %>
           <% end %>
         </li>
-        <li class="nav-item d-none d-lg-block">
-          <% if user_signed_in? %>
-            <div class="profile-picture">
-              <% if current_user.photo.attached? %>
-                <%= link_to profile_path do %>
-                  <%= image_tag current_user.photo.variant(resize: '30x30'), alt: 'profile picture', class: 'rounded-circle' %>
-                <% end %>
-              <% else %>
+        <% if user_signed_in? %>
+          <% if current_user.photo.attached? %>
+            <%= link_to user_path(current_user) do %>
+              <div class="profile-picture me-2 d-md-block">
+                <%= image_tag current_user.photo.variant(resize: '30x30'), alt: 'profile picture', class: 'rounded-circle', style: 'cursor: pointer;' %>
+              </div>
+            <% end %>
+          <% else %>
+            <%= link_to user_path(current_user) do %>
+              <div class="profile-picture me-2 d-md-block">
                 <%= image_tag 'https://placehold.co/40x40', alt: 'placeholder', class: 'rounded-circle', width: '30', height: '30' %>
-              <% end %>
-            </div>
+              </div>
+            <% end %>
           <% end %>
-        </li>
+        <% end %>
       </ul>
     </div>
   </div>
