--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -25,7 +25,9 @@
   <%= f.button :submit, 'Delete', data: { confirm: 'Are you sure?' } %>
 <% end %>
 
-<%= link_to 'Chatroom', game_group_chatroom_path(@game, @group, @chatroom) %>
+<%# <%= link_to 'Chatroom', game_group_chatroom_path(@game, @group, @chatroom) %>
 
 
 <%= link_to 'Back', game_path(@group.game) %>
+
+<%= render 'chatrooms/chatbox' %>
