--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -59,17 +59,17 @@
   }
 
   .back-btn {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    border: none;
-    box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.16);
-    color: #808080;
-    text-decoration: none;
-    display: inline-block;
-    transition: transform 0.3s ease-in-out, font-size 0.3s ease-in-out;
-    width: auto;
-    margin-bottom: 20px;
-  }
+  padding-top: 0;
+  padding-bottom: 0;
+  border: none;
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.16);
+  color: #808080;
+  text-decoration: none;
+  display: inline-block;
+  transition: transform 0.3s ease-in-out, font-size 0.3s ease-in-out;
+  width: auto;
+  margin-bottom: 20px;
+}
 
   .back-btn:hover,
   .back-btn:focus {
@@ -112,7 +112,7 @@
   }
 </style>
 
-<div class="card-container" style="margin-top: 20px;">
+<div class="card-container">
   <div class="card">
     <h2 class="form-title">Edit <%= resource_name.to_s.humanize %></h2>
     <br>
@@ -166,7 +166,7 @@
 
     <div style="display: flex; justify-content: center; align-items: center; height: 100%;">
       <div style="text-align: center;">
-        <%= link_to 'Back', profile_path, class: 'form-control back-btn', style: 'width: auto; text-decoration: none; display: inline-block; margin-bottom: 20px; color: grey; border: none;' %>
+        <%= link_to 'Back', profile_path, class: 'form-control back-btn' %>
         <br>
         <div>Unhappy?
           <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %>
