--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,9 +1,6 @@
 <div style="padding: 20px;">
   <%# <h1 style="font-family: 'Black Ops One'; color: dark; padding: 20px;">Games</h1> %>
-
-
 </div>
-
 
 <section class="text-newwhite pt-3 pb-1 section">
   <div class="container">
@@ -39,52 +36,51 @@
 <div class="row">
   <% if params[:query] %>
      <% @games.each do |game| %>
-      <div class="col-sm-4">
-        <div class="card bg-newwhite text-primary border-primary shadow m-3" style="border-radius: 15px; height: auto; width: 100%;">
+      <div class="col-sm-4 mb-4">
+        <div class="card new-card" style="border-radius: 15px; height: 100%; width: 100%; background-color: #FFFFFF; border: none; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="card-body d-flex flex-column justify-content-center align-items-center">
-          <div class="container">
-            <div class="row">
-              <div class="col-3 d-flex justify-content-center align-items-center ">
-                <img src="<%= game.home_team.emblem %>" class="emblem-image-home" alt="<%= game.home_team.name %> Image">
-              </div>
-              <div class="col-6 flex-column justify-content-center align-items-center text-center">
+            <div class="container">
+              <div class="row">
+                <div class="col-3 d-flex justify-content-center align-items-center ">
+                  <img src="<%= game.home_team.emblem %>" class="emblem-image-home" alt="<%= game.home_team.name %> Image">
+                </div>
+                <div class="col-6 flex-column justify-content-center align-items-center text-center">
                   <p><strong><%= "#{game.home_team.name} vs #{game.away_team.name}"%></strong></p>
                   <p><%= "Location: #{game.city}" %></p>
                   <p><%= "Date: #{game.date}" %></p>
-                  <p><%= link_to "View Game", game_path(game), class: "btn btn-warning rounded-pill shadow"%></p>
+                  <p><%= link_to "View Game", game_path(game), class: "btn btn-warning rounded-pill shadow btn-hover"%></p>
+                </div>
+                <div class="d-flex col-3 justify-content-center align-items-center ">
+                  <img src="<%= game.away_team.emblem %>" class="emblem-image-away" alt="<%= game.away_team.name %> Image">
+                </div>
               </div>
-              <div class="d-flex col-3 justify-content-center align-items-center ">
-              <img src="<%= game.away_team.emblem %>" class="emblem-image-away" alt="<%= game.away_team.name %> Image">
-              </div>
-            </div>
             </div>
           </div>
         </div>
       </div>
-  <% end %>
-</div>
-
+    <% end %>
+  </div>
 <% else %>
- <div class="row">
+  <div class="row">
     <% @games.each do |game| %>
-      <div class="col-sm-4">
-        <div class="card bg-newwhite text-primary border-none shadow m-3" style="border-radius: 15px; height: auto; width: 100%;">
+      <div class="col-sm-4 mb-4">
+        <div class="card new-card" style="border-radius: 15px; height: 100%; width: 100%; background-color: #FFFFFF; border: none; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="card-body d-flex flex-column justify-content-center align-items-center">
-          <div class="container">
-            <div class="row">
-              <div class="col-3 d-flex justify-content-center align-items-center ">
-                <img src="<%= game.home_team.emblem %>" class="emblem-image-home" alt="<%= game.home_team.name %> Image">
-              </div>
-              <div class="col-6 flex-column justify-content-center align-items-center text-center">
+            <div class="container">
+              <div class="row">
+                <div class="col-3 d-flex justify-content-center align-items-center ">
+                  <img src="<%= game.home_team.emblem %>" class="emblem-image-home" alt="<%= game.home_team.name %> Image">
+                </div>
+                <div class="col-6 flex-column justify-content-center align-items-center text-center">
                   <p><strong><%= "#{game.home_team.name} vs #{game.away_team.name}"%></strong></p>
                   <p><%= "Location: #{game.city}" %></p>
                   <p><%= "Date: #{game.date}" %></p>
-                  <p><%= link_to "View Game", game_path(game), class: "btn btn-warning rounded-pill shadow"%></p>
+                  <p><%= link_to "View Game", game_path(game), class: "btn btn-warning rounded-pill shadow btn-hover"%></p>
+                </div>
+                <div class="d-flex col-3 justify-content-center align-items-center ">
+                  <img src="<%= game.away_team.emblem %>" class="emblem-image-away" alt="<%= game.away_team.name %> Image">
+                </div>
               </div>
-              <div class="d-flex col-3 justify-content-center align-items-center ">
-              <img src="<%= game.away_team.emblem %>" class="emblem-image-away" alt="<%= game.away_team.name %> Image">
-              </div>
-            </div>
             </div>
           </div>
         </div>
@@ -92,7 +88,5 @@
     <% end %>
   </div>
 <% end %>
-
-
 
 <%= link_to raw('<i class="fa fa-arrow-left text-warning" style="font-size: 2em; margin: 10px; text-shadow: 1px 1px 2px #888888;"></i>'), :back %>
