--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -2,74 +2,48 @@
   <%# <h1 style="font-family: 'Black Ops One'; color: dark; padding: 20px;">Games</h1> %>
 </div>
 
-<section class="text-newwhite pt-3 pb-1 section">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-md-3 d-flex align-items-center justify-content-center mb-3">
-        <h3 class="mob-md-0" style="margin-bottom: 0; font-family: 'Black Ops One', cursive; color: #333333; font-weight: 300; font-size: 32px; text-align: center;">
-          Find a match
-        </h3>
-      </div>
-      <div class="col-md-6 text-center mb-3" style="padding-left: 10px;">
-        <%= form_with url: games_path, method: :get, class: "d-flex" do %>
-        <%= text_field_tag :query,
-          params[:query],
-           class: "form-control",
-           placeholder: "Type your desired location (City)"
-        %>
-        <%= text_field_tag :date,
-          params[:date],
-          class: "form-control",
-          data: { controller: "datepicker"} ,
-          placeholder: "Pick your date"
-        %>
-        <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
-        <% end %>
-      </div>
-      <div class="col-md-3 text-center mb-3">
-      </div>
-    </div>
-  </div>
-    <%# <button class="btn btn-primary m1-2" id="useMyLocation"><i class="fas fa-map-marker-alt"></i></button> %>
-</section>
-
-<div class="cards-container"> <!-- Added wrapping div -->
-  <div class="row">
-    <% if params[:query] %>
-       <% @games.each do |game| %>
-        <div class="col-sm-4 mb-4">
-          <div class="card new-card" style="border-radius: 15px; height: 100%; width: 100%; background-color: #FFFFFF; border: none; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-            <div class="card-body d-flex flex-column justify-content-center align-items-center">
-              <div class="container">
-                <div class="row">
-                  <div class="col-3 d-flex justify-content-center align-items-center ">
-                    <img src="<%= game.home_team.emblem %>" class="emblem-image-home" alt="<%= game.home_team.name %> Image">
-                  </div>
-                  <div class="col-6 flex-column justify-content-center align-items-center text-center">
-                    <p><strong><%= "#{game.home_team.name} vs #{game.away_team.name}"%></strong></p>
-                    <p><%= "Location: #{game.city}" %></p>
-                    <p><%= "Date: #{game.date}" %></p>
-                    <p><%= link_to "View Game", game_path(game), class: "btn btn-warning rounded-pill shadow btn-hover"%></p>
-                  </div>
-                  <div class="d-flex col-3 justify-content-center align-items-center ">
-                    <img src="<%= game.away_team.emblem %>" class="emblem-image-away" alt="<%= game.away_team.name %> Image">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+<div class="container" style="padding-left: 15px;">
+  <section class="text-newwhite pt-3 pb-1 section">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-3 d-flex align-items-center justify-content-center mb-3">
+          <h3 class="mob-md-0" style="margin-bottom: 0; font-family: 'Black Ops One', cursive; color: #333333; font-weight: 300; font-size: 32px; text-align: center;">
+            Find a match
+          </h3>
         </div>
-      <% end %>
+        <div class="col-md-6 text-center mb-3" style="padding-left: 10px;">
+          <%= form_with url: games_path, method: :get, class: "d-flex" do %>
+            <%= text_field_tag :query,
+              params[:query],
+              class: "form-control",
+              placeholder: "Type your desired location (City)"
+            %>
+            <%= text_field_tag :date,
+              params[:date],
+              class: "form-control",
+              data: { controller: "datepicker"} ,
+              placeholder: "Pick your date"
+            %>
+            <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
+          <% end %>
+        </div>
+        <div class="col-md-3 text-center mb-3">
+        </div>
+      </div>
     </div>
-  <% else %>
+  </section>
+</div>
+
+<div class="container">
+  <div class="cards-container">
     <div class="row">
       <% @games.each do |game| %>
-        <div class="col-sm-4 mb-4">
+        <div class="col-md-4 col-sm-6 mb-4">
           <div class="card new-card" style="border-radius: 15px; height: 100%; width: 100%; background-color: #FFFFFF; border: none; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
             <div class="card-body d-flex flex-column justify-content-center align-items-center">
               <div class="container">
                 <div class="row">
-                  <div class="col-3 d-flex justify-content-center align-items-center ">
+                  <div class="col-3 d-flex justify-content-center align-items-center">
                     <img src="<%= game.home_team.emblem %>" class="emblem-image-home" alt="<%= game.home_team.name %> Image">
                   </div>
                   <div class="col-6 flex-column justify-content-center align-items-center text-center">
@@ -78,7 +52,7 @@
                     <p><%= "Date: #{game.date}" %></p>
                     <p><%= link_to "View Game", game_path(game), class: "btn btn-warning rounded-pill shadow btn-hover"%></p>
                   </div>
-                  <div class="d-flex col-3 justify-content-center align-items-center ">
+                  <div class="d-flex col-3 justify-content-center align-items-center">
                     <img src="<%= game.away_team.emblem %>" class="emblem-image-away" alt="<%= game.away_team.name %> Image">
                   </div>
                 </div>
@@ -88,7 +62,7 @@
         </div>
       <% end %>
     </div>
-  <% end %>
+  </div>
 </div>
 
 <%= link_to raw('<i class="fa fa-arrow-left text-warning" style="font-size: 2em; margin: 10px; text-shadow: 1px 1px 2px #888888;"></i>'), :back %>
