--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,37 +1,70 @@
-<div style="padding: 20px;">
-  <%# <h1 style="font-family: 'Black Ops One'; color: dark; padding: 20px;">Games</h1> %>
-</div>
+<style>
+  .form-group {
+    margin-bottom: 15px;
+  }
 
-<div class="container" style="padding-left: 15px;">
-  <section class="text-newwhite pt-3 pb-1 section">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-3 d-flex align-items-center justify-content-center mb-3">
-          <h3 class="mob-md-0" style="margin-bottom: 0; font-family: 'Black Ops One', cursive; color: #333333; font-weight: 300; font-size: 32px; text-align: center;">
-            Find a match
-          </h3>
-        </div>
-        <div class="col-md-6 text-center mb-3" style="padding-left: 10px;">
-          <%= form_with url: games_path, method: :get, class: "d-flex" do %>
-            <%= text_field_tag :query,
-              params[:query],
-              class: "form-control",
-              placeholder: "Type your desired location (City)"
-            %>
-            <%= text_field_tag :date,
-              params[:date],
-              class: "form-control",
-              data: { controller: "datepicker"} ,
-              placeholder: "Pick your date"
-            %>
-            <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
-          <% end %>
-        </div>
-        <div class="col-md-3 text-center mb-3">
-        </div>
-      </div>
+  input.form-control {
+    width: calc(100% - 10px);
+    height: 48px;
+    font-size: 16px;
+    padding: 10px;
+    box-sizing: border-box;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+
+  input.form-control::placeholder {
+    color: #1CAE82;
+  }
+
+  .btn-dark-blue {
+    color: #fff;
+    background-color: #001626;
+    border-color: #001626;
+    height: 48px;
+    line-height: 48px;
+    padding: 0 20px;
+  }
+
+  .btn-dark-blue:hover {
+    color: #012B4D;
+    background-color: #ffc107;
+  }
+
+  .btn-dark-blue:focus {
+    color: #fff;
+    background-color: #012B4D;
+    border-color: #012B4D;
+    box-shadow: 0 0 0 0.25rem rgba(0, 38, 77, 0.5);
+  }
+</style>
+
+<div class="container text-center" style="margin-top: 20px; margin-bottom: 20px;">
+  <%= form_with url: games_path, method: :get, class: "d-flex align-items-center justify-content-center" do |form| %>
+    <h3 class="mob-md-0" style="margin-right: 10px; font-family: 'Black Ops One', cursive; color: #333333; font-weight: 300; font-size: 32px; text-align: center;">
+      Find a match
+    </h3>
+
+    <div class="form-group">
+      <%= form.label 'query', 'Location (City):', class: 'sr-only' %>
+      <%= form.text_field :query,
+        class: "form-control",
+        placeholder: "Type your desired location (City)"
+      %>
     </div>
-  </section>
+
+    <div class="form-group" style="margin-left: 10px;">
+      <%= form.label 'date', 'Date:', class: 'sr-only' %>
+      <%= form.text_field :date,
+        class: "form-control",
+        data: { controller: "datepicker" },
+        placeholder: "Pick your date"
+      %>
+    </div>
+
+    <%= form.submit "Search", name: "", class: "btn btn-dark-blue ml-2 align-self-start" %>
+  <% end %>
 </div>
 
 <div class="container">
